--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Ping Pong</title>
   </head>
   <body>
-
+    <div class="container">
+      <div class="page-header">
+        <h1>PING PONG</h1>
+      </div>
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Enter Number">
+      </div>
+    <button type="submit" class="btn btn-default">Submit</button>
+  </div>
   </body>
 </html>
