--- a/index.html
+++ b/index.html
@@ -12,10 +12,33 @@
       <div class="page-header">
         <h1>PING PONG</h1>
       </div>
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Enter Number">
+
+<!--- Instructions --->
+
+        <h3>Instructions</h3>
+          <ul>
+            <li>Numbers that are divisible by 3 are replaced with the word "ping"</li>
+            <li>Numbers that are divisible by 5 are replaced with the word "pong"</li>
+            <li>Numbers that are divisable by 15 are replaced with the word "pingpong"</li>
+          </ul>
+          <br></br>
+
+<!--- Number input --->
+
+      <form id="pingpong">
+        <div class="form-group">
+          <input type="text" id="number" placeholder="Enter Number">
+        </div>
+
+      <button type="submit" class="btn btn-default">Submit</button>
+
+      </form>
+
+<!--- Output --->
+
+      <div id="output">
       </div>
-    <button type="submit" class="btn btn-default">Submit</button>
-  </div>
+
+    </div>
   </body>
 </html>
