--- a/index.html
+++ b/index.html
@@ -25,18 +25,24 @@
 
 <!--- Number input --->
 
-      <form id="pingpong">
+      <form id="pingPong">
         <div class="form-group">
           <input type="text" id="number" placeholder="Enter Number">
         </div>
 
       <button type="submit" class="btn btn-default">Submit</button>
+      <form method="post">
+      <input type="button" value="Refresh" class="btn btn-default"
+      onclick="window.location.reload()">
+      </form>
 
       </form>
 
 <!--- Output --->
 
       <div id="output">
+        <ul class="list">
+        </ul>
       </div>
 
     </div>
