adds image file, and image to the program. Adds addition info to program instructions.

--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 
 <!--- Instructions --->
 
-        <h3>Instructions</h3>
+      <img src="img/pong.jpg" width="350" alt="Ping Pong">
+
+        <h3>Instructions:</h3>
+        <h4>Enter a number!</h4>
           <ul>
-            <li>Numbers that are divisible by 3 are replaced with the word "ping"</li>
-            <li>Numbers that are divisible by 5 are replaced with the word "pong"</li>
-            <li>Numbers that are divisable by 15 are replaced with the word "pingpong"</li>
+            <li>Numbers that are divisible by 3 are replaced with the word "Ping"</li>
+            <li>Numbers that are divisible by 5 are replaced with the word "Pong"</li>
+            <li>Numbers that are divisable by 15 are replaced with the word "Ping Pong"</li>
           </ul>
           <br></br>
 
@@ -31,10 +34,11 @@
         </div>
 
       <button type="submit" class="btn btn-default">Submit</button>
-      <form method="post">
-      <input type="button" value="Refresh" class="btn btn-default"
-      onclick="window.location.reload()">
-      </form>
+
+        <form method="post">
+          <input type="button" value="Refresh" class="btn btn-default"
+          onclick="window.location.reload()">
+        </form>
 
       </form>
 
